# opencode_sprint_loop

./: .gitmodules  AGENTS.md  MANIFEST.in  README.md  pyproject.toml
.opencode/agents/: auditor.md  builder.md
.opencode/commands/: address-audit.md  audit.md
docs/: audit_policy.md  multi_sprint_plan.md  threat_model.md  v1_final_software_specification.md
docs/controller-v1/1/: sprint_checklist.md  sprint_spec.md
docs/controller-v1/2/: sprint_checklist.md  sprint_spec.md
docs/controller-v1/3/: sprint_checklist.md  sprint_spec.md
scripts/: demo_sprint1.py
src/opencode_sprint_loop/: __init__.py  agent_runner.py  cli.py  config.py  errors.py  events.py  git.py  invocations.py  jsonio.py  locking.py  opencode_runner.py  paths.py  safeio.py  security.py  state.py  status.py  transitions.py
tests/: __init__.py  test_foundation.py
tests/integration/: __init__.py  test_foundation.py
tests/unit/: __init__.py  test_opencode_execution.py  test_state_contract.py
